// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesPage should match snapshot and render CategoryTiles if the path is the root category 1`] = `
<div>
  <Breadcrumbs
    ancestorBreadcrumbs={Array []}
    currentBreadcrumb={
      BreadcrumbModel {
        "_link": "http://localhost/augsburg/de",
        "_node": <Connect(Link)
          to="/augsburg/de"
        >
          Stadt Augsburg
        </Connect(Link)>,
        "_title": "Stadt Augsburg",
      }
    }
    direction="ltr"
  />
  <Tiles
    tiles={
      Array [
        TileModel {
          "_isExternalUrl": false,
          "_path": "/augsburg/de/willkommen",
          "_postData": null,
          "_thumbnail": "thumb-nail",
          "_title": "willkommen",
        },
        TileModel {
          "_isExternalUrl": false,
          "_path": "/augsburg/de/erste-schritte",
          "_postData": null,
          "_thumbnail": "thumb-nail",
          "_title": "erste-schritte",
        },
      ]
    }
    title="localInformation"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render a CategoryList if the category is neither the root but has children 1`] = `
<div>
  <Breadcrumbs
    ancestorBreadcrumbs={
      Array [
        BreadcrumbModel {
          "_link": "http://localhost/augsburg/de",
          "_node": <Connect(Link)
            to="/augsburg/de"
          >
            Stadt Augsburg
          </Connect(Link)>,
          "_title": "Stadt Augsburg",
        },
      ]
    }
    currentBreadcrumb={
      BreadcrumbModel {
        "_link": "http://localhost/augsburg/de/erste-schritte",
        "_node": <Connect(Link)
          to="/augsburg/de/erste-schritte"
        >
          erste-schritte
        </Connect(Link)>,
        "_title": "erste-schritte",
      }
    }
    direction="ltr"
  />
  <CategoryList
    categories={
      Array [
        Object {
          "model": CategoryModel {
            "_availableLanguages": Map {},
            "_content": "exampleContent0",
            "_hash": "91d435afbc7aa83496137e81fd2832e3",
            "_lastUpdate": "2016-01-07T09:36:24.000Z",
            "_order": 3,
            "_parentPath": "/augsburg/de/erste-schritte",
            "_path": "/augsburg/de/erste-schritte/asylantrag",
            "_root": false,
            "_thumbnail": "thumb-nail",
            "_title": "asylantrag",
          },
          "subCategories": Array [],
        },
      ]
    }
    content="exampleContent0"
    onInternalLinkClick={[Function]}
    thumbnail="thumb-nail"
    title="erste-schritte"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render a Page if page has no children 1`] = `
<div>
  <Breadcrumbs
    ancestorBreadcrumbs={
      Array [
        BreadcrumbModel {
          "_link": "http://localhost/augsburg/de",
          "_node": <Connect(Link)
            to="/augsburg/de"
          >
            Stadt Augsburg
          </Connect(Link)>,
          "_title": "Stadt Augsburg",
        },
        BreadcrumbModel {
          "_link": "http://localhost/augsburg/de/erste-schritte",
          "_node": <Connect(Link)
            to="/augsburg/de/erste-schritte"
          >
            erste-schritte
          </Connect(Link)>,
          "_title": "erste-schritte",
        },
      ]
    }
    currentBreadcrumb={
      BreadcrumbModel {
        "_link": "http://localhost/augsburg/de/erste-schritte/asylantrag",
        "_node": <Connect(Link)
          to="/augsburg/de/erste-schritte/asylantrag"
        >
          asylantrag
        </Connect(Link)>,
        "_title": "asylantrag",
      }
    }
    direction="ltr"
  />
  <Page
    content="exampleContent0"
    language="en"
    lastUpdate={"2016-01-07T09:36:24.000Z"}
    onInternalLinkClick={[Function]}
    title="asylantrag"
  />
</div>
`;

exports[`CategoriesPage should match snapshot and render an error if path is not valid 1`] = `
<FailureSwitcher
  error={[NotFoundError: The category /augsburg/de/not/valid does not exist here.]}
/>
`;
